♻️ Refactor: ChannelOverViewFacade 스트림 로직 간소화
- Collectors.mapping 내부 코드 리팩토링으로 가독성 향상
- 중복 제거 및 switch 문 내부 코드 단순화